# wormhole-page

./: .gitignore  CLAUDE.md  Containerfile  Makefile  README.md  TODOS.md  fly.toml  pyproject.toml
crates/magic-wormhole-patched/src/: transit.rs
crates/server/: Cargo.toml
crates/server/src/: main.rs
crates/wormhole-wasm/: Cargo.toml
crates/wormhole-wasm/src/: lib.rs
docs/: wasm-e2e-plan.md  wasm-e2e-spec.md
docs/superpowers/plans/: 2026-03-16-wormhole-web.md
docs/superpowers/specs/: 2026-03-16-streaming-send-design.md  2026-03-16-wormhole-web-design.md  2026-03-17-consistent-hashing-design.md
src/wormhole_web/: __init__.py  constants.py  fly.py  receiver.py  routing.py  sender.py  server.py  session.py  streaming.py  util.py
src/wormhole_web/static/: index.html  wasm-client.js
src/wormhole_web/static/wasm/: wormhole_wasm.js  wormhole_wasm_bg.wasm
static/: age.js  app.js  index.html  store-client.js  style.css  sw.js  wasm-client.js  wordlist.js
tests/: conftest.py  test_fly.py  test_integration.py  test_routing.py  test_streaming.py  test_util.py
tests/e2e/: page-load.spec.ts
